@@ -2,6 +2,7 @@ package com.ticketnow.backend;
 
 import java.util.List;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -13,68 +14,73 @@ import org.springframework.web.bind.annotation.RestController;
 @RequestMapping("/api")
 @CrossOrigin(origins = "http://localhost:5173")
 public class BookingController {
-    
+
     @Autowired
     private BookingRepository bookingRepository;
-    
-    // Store available tickets (in a real app, this would be in a database)
-    private static int availableTickets = 100;
+
+    @Autowired
+    private TicketInventoryService ticketInventoryService;
 
     @PostMapping("/book")
-    public BookingResponse bookTickets(@RequestBody BookingRequest request) {
-        // Validate required fields
-        if (request.getName() == null || request.getName().trim().isEmpty()) {
-            return new BookingResponse(false, "Name is required", null, availableTickets);
-        }
+    public ResponseEntity<BookingResponse> bookTickets(@RequestBody BookingRequest request) {
+        Long eventId = (request.getEventId() != null) ? request.getEventId() : 1L;
+        int available = ticketInventoryService.getAvailableTickets(eventId);
 
-        if (request.getEmail() == null || request.getEmail().trim().isEmpty()) {
-            return new BookingResponse(false, "Email is required", null, availableTickets);
+        if (request.getName() == null || request.getName().isBlank()) {
+            return ResponseEntity.badRequest()
+                    .body(new BookingResponse(false, "Name is required", null, available));
         }
-
-        if (request.getDepartment() == null || request.getDepartment().trim().isEmpty()) {
-            return new BookingResponse(false, "Department is required", null, availableTickets);
+        if (request.getEmail() == null || request.getEmail().isBlank()) {
+            return ResponseEntity.badRequest()
+                    .body(new BookingResponse(false, "Email is required", null, available));
         }
-
-        // Validate ticket count
+        if (request.getDepartment() == null || request.getDepartment().isBlank()) {
+            return ResponseEntity.badRequest()
+                    .body(new BookingResponse(false, "Department is required", null, available));
+        }
         if (request.getNumberOfTickets() <= 0) {
-            return new BookingResponse(false, "Number of tickets must be greater than 0", null, availableTickets);
+            return ResponseEntity.badRequest()
+                    .body(new BookingResponse(false, "Number of tickets must be greater than 0", null, available));
+        }
+        if (request.getNumberOfTickets() > available) {
+            return ResponseEntity.badRequest()
+                    .body(new BookingResponse(false,
+                            "Not enough tickets. Only " + available + " remaining.", null, available));
         }
 
-        // Check if requested tickets exceed available tickets
-        if (request.getNumberOfTickets() > availableTickets) {
-            return new BookingResponse(
-                false, 
-                "Not enough tickets available. Only " + availableTickets + " tickets remaining.",
-                null,
-                availableTickets
-            );
+        boolean deducted = ticketInventoryService.deductTickets(eventId, request.getNumberOfTickets());
+        if (!deducted) {
+            return ResponseEntity.badRequest()
+                    .body(new BookingResponse(false, "Booking failed. Please try again.", null, available));
         }
 
-        // Process booking
-        availableTickets -= request.getNumberOfTickets();
+        int remaining = ticketInventoryService.getAvailableTickets(eventId);
+        String eventName = ticketInventoryService.getEventName(eventId);
 
-        // Create Booking entity and save to database
         Booking booking = new Booking(
-            request.getName(),
-            request.getEmail(),
-            request.getDepartment(),
-            request.getNumberOfTickets()
-        );
-        
+                request.getName(),
+                request.getEmail(),
+                request.getDepartment(),
+                request.getNumberOfTickets(),
+                eventId,
+                eventName);
+
         Booking savedBooking = bookingRepository.save(booking);
 
-        BookingResponse response = new BookingResponse(
-            true,
-            "Booking successful! " + request.getNumberOfTickets() + " tickets booked for " + request.getName() + ". Booking ID: " + savedBooking.getId(),
-            savedBooking,
-            availableTickets
-        );
-
-        return response;
+        return ResponseEntity.ok(new BookingResponse(
+                true,
+                "Booking successful! " + request.getNumberOfTickets() + " ticket(s) booked. ID: " + savedBooking.getId(),
+                savedBooking,
+                remaining));
     }
 
     @GetMapping("/bookings")
-    public List<Booking> getAllBookings() {
-        return bookingRepository.findAll();
+    public ResponseEntity<List<Booking>> getAllBookings() {
+        return ResponseEntity.ok(bookingRepository.findAll());
+    }
+
+    @GetMapping("/tickets")
+    public ResponseEntity<?> getAvailableTickets() {
+        return ResponseEntity.ok(ticketInventoryService.getAllAvailableTickets());
     }
 }
